# 8bit-vm

./: .gitignore  README.md  meson.build
include/compiler/: ast.h  compiler.h  lexer.h  parser.h
include/vm/: instruction.h  vm.h
src/: main.c  meson.build
src/compiler/: ast.c  compiler.c  lexer.c  meson.build  parser.c
src/vm/: instruction.c  meson.build  vm.c
